@@ -29,6 +29,8 @@ Release 0.12.1 - unreleased
 
     S2GRAPH-41: Refactor PostProcess's toSimpleVertexArrJson (Committed by DOYUNG YOON).
 
+    S2GRAPH-44: Provide cache for WhereParser on query (Committed by DOYUNG YOON).
+
   BUG FIXES
 
     S2GRAPH-18: Query Option "interval" is Broken. 
